--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -42,6 +42,7 @@
   box-sizing: border-box;
 }
 body{
-  width: 100vw;
+  /* width: 100vw; */
   height: 100vh;
+  background-color: rgba(124, 228, 124, 0.1);
 }
