--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -44,5 +44,5 @@
 body{
   /* width: 100vw; */
   height: 100vh;
-  background-color: rgba(124, 228, 124, 0.1);
+  /* background-color: rgba(124, 228, 124, 0.1); */
 }
